# datadog-security-playground

./: .gitignore  DEVELOPER.md  LIMA.md  Makefile  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: app-image.yaml  tests.yaml
app/: Dockerfile  app.py  requirements.txt
app/html/: index.php
app/templates/: index.html
appsec/: Dockerfile  README.md
appsec/onboarding/: README.md
appsec/onboarding/setups/: docker-compose.apm-only.envoy-go-gin.yml  (+4 more)
assets/: Dockerfile  Makefile  README.md
assets/bpfdoor/: build.sh  fake-bpfdoor.x64
assets/cloud-access/: cloud-access.sh
assets/correlation/: backend-rule.json  cloud-access.sh  create-rule.sh  payload.sh
assets/malware/: build.sh  go.mod  malware.arm64  malware.x64  payload.sh
assets/rce-malware/: payload.sh
deploy/: README.md  app.yaml  cronjob-rce-malware.yaml  cronjob-scenario-detonator.yaml  datadog-agent.yaml  redteam.yaml
scenarios/bpfdoor/: README.md
scenarios/cloud-access/: detonate.sh
scenarios/correlation/: detonate.sh
scenarios/findings-generator/: detonate.sh
scenarios/malware/: README.md
scenarios/rce-malware/: detonate.sh
scripts/: tool.sh
terraform/eks/: README.md  k8s.tf  main.tf  terraform.tf  variables.tf
tests/: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  test_rce_malware.py
tests/agent_config/: system-probe.yaml
tests/app_client/: __init__.py  client.py
tests/runtime_security_server/: __init__.py  generate_proto.py  server.py
tests/runtime_security_server/grpc_gen/: api_pb2.py  api_pb2_grpc.py
(+2 files in other folders)
